created bookmarks controller & added heroku config

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @list.name %></h1>
-<p><%= link_to 'Back to all lists', lists_path %></p>
+<p><%= link_to 'Back to all lists', root_path %></p>
+<%= @list.movies %>
 <%= @list.movies.each do |movie| %>
     <%= movie.title %>
 <% end %>
