--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -4,6 +4,7 @@
 <%= simple_form_for([@list, @bookmark]) do |f| %>
   <%= f.input :comment %>
   <%= f.association :movie, as: :select %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit %>
 <% end %>
 
